plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '4.0.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.sonarqube' version '7.2.3.7755'
}

group = 'com.gtdonrails'
version = '2.5.0'

springBoot {
	mainClass = 'com.gtdonrails.api.ApiApplication'
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

dependencyLocking {
	lockAllConfigurations()
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'org.xerial:sqlite-jdbc'
	// WHY: Hibernate 7 moved SQLiteDialect to the community-dialects module.
	implementation 'org.hibernate.orm:hibernate-community-dialects'

	implementation 'com.google.api-client:google-api-client:2.8.0'
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20260517-2.0.0'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.register('unitTest', Test) {
	group = 'verification'
	description = 'Runs unit tests.'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		excludeTags 'integration'
	}
	shouldRunAfter tasks.named('test')
}

tasks.register('integrationTest', Test) {
	group = 'verification'
	description = 'Runs integration tests.'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	useJUnitPlatform {
		includeTags 'integration'
	}
	shouldRunAfter tasks.named('test')
}

jacocoTestReport {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
	}
}

tasks.named('sonar') {
	dependsOn tasks.named('jacocoTestReport')
}

sonar {
	properties {
		property 'sonar.organization', 'victor-saraiva-p-1'
		property 'sonar.projectKey', 'victor-saraiva-p-1'
		property 'sonar.host.url', 'https://sonarcloud.io'
		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
	}
}
